[metadata]
name = xml-parser
version = 0.0.1
description = Abstract XML parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alejandro77palacios/xml_parser
author = Alejandro Prieto Palacios
author_email = "Alejandro" <alex_palacios77@icloud.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    tests*

######################
# Tool configuration #
######################

[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = tests

[tox:tox]
envlist = py39,py310,py311,py312,py313
isolated_build = True

[testenv]
deps =
    pytest
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
    types-termcolor
commands =
    mypy --ignore-missing-imports {posargs:src tests}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src tests}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src tests}
